[package]
name = "photon_count_adjuster"
version = "1.2.1"
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true

[dependencies]
native-windows-gui = { version = "1.0", features = ["combobox", "trackbar", "embed-resource"] }
native-windows-derive = "1.0"
ddc = "0.2.2"
ddc-winapi = "0.2.0"
winapi = { version = "0.3.9", features = ["highlevelmonitorconfigurationapi"] }


[build-dependencies]
winres = "0.1"