[package]
authors = ["joel nises <joel.nises@gmail.com>"]
build = "build.rs"
edition = "2021"
name = "photon_count_adjuster"
version = "2.0.0"

[profile.release]
lto = true 
opt-level = "s" # Optimize for size.

[dependencies]
ddc = "0.2.2"
ddc-winapi = "0.2.0"
native-windows-derive = "1.0"
native-windows-gui = {version = "1.0", features = ["combobox", "trackbar", "embed-resource", "high-dpi"]}
winapi = {version = "0.3.9", features = ["highlevelmonitorconfigurationapi"]}

[build-dependencies]
winres = "0.1"
